# DjangoStudy

./: db.sqlite3  pyproject.toml
boards/: admin.py  models.py  serializers.py  urls.py  views.py
boards/migrations/: 0001_initial.py  0002_board_user.py
boards/templates/: all_boards.html  reviews.html
chattings/: admin.py  models.py
common/: models.py
config/: settings.py  urls.py
reviews/: admin.py  models.py  serializers.py  views.py
reviews/migrations/: 0001_initial.py  0002_alter_review_date.py  0003_alter_review_date.py  0004_review_board_review_user_alter_review_date.py  0005_alter_review_date.py  0006_review_content_alter_review_date.py
storys/: admin.py  models.py
storys/migrations/: 0001_initial.py  0002_alter_story_time.py  0003_alter_story_time.py  0004_alter_story_time.py  0005_alter_story_time.py  0006_alter_story_time.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
